<resources>
    <string name="app_name">CAR RENTAL SYSTEM</string>
    <string name="app_slogan">YOUR BEST ALLY</string>

    <string name="title_activity_login">Login</string>

    <string name="prompt_user_name">User name</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="valor">VALOR DIARIO</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titulo">Bienvenido,</string>
    <string name="descripcion">descripcion</string>
    <string name="encabezado">Complete el formulario para empezar</string>
    <string name="tipoIdentificacion">Tipo</string>
    <string name="identificacion">Identificación</string>
    <string name="apellidoPaterno">Apellido paterno</string>
    <string name="apellidoMaterno">Apellido materno</string>
    <string name="nombre">Nombres</string>
    <string name="fechaNacimiento">Fecha nacimiento</string>
    <string name="celular">Celular</string>
    <string name="regresar">Regresar</string>
    <string name="registrarButton">Registrar</string>
    <string name="seleccione">Seleccione</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="vehiculoCardViewText">VEHICULO</string>
    <string name="contratoCardViewText">CONTRATOS</string>
    <string name="monitoreoCardViewText">MONITOREO</string>
    <string name="historialCardViewText">HISTORIAL</string>
    <string name="publicacionesCardViewText">PUBLICACIONES</string>
    <string name="acercaDe">ACERCA DE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placa">PLACA</string>
    <string name="marca">MARCA</string>
    <string name="modelo">MODELO</string>
    <string name="anio">ANIO</string>
    <string name="puertas">PUERTAS</string>
    <string name="maletas">MALETAS</string>
    <string name="pasajeros">PASAJEROS</string>
    <string name="transmision">TRANSMISION</string>
    <string name="traccion">TRACCION</string>
    <string name="sunroof">¿Dispone de techo corredizo?</string>
    <string name="aire">¿Dispone de aire acondicionado?</string>
    <string name="gps">GPS</string>
    <string name="cerrar_sesion">CERRAR SESION</string>

    <string name="preference">uteq.student.project.clientrentof.PREFERENCE_FILE_KEY</string>
    <string name="escribir_correo_electronico">Escribir correo electronico</string>
    <string name="recuperarcontrasenia">RecuperarContrasenia</string>
    <string name="apellidos">apellidos</string>
    <string name="nombres">nombres</string>
    <string name="cedula">cedula</string>
    <string name="telefono">telefono</string>
    <string name="datos_contratos">Datos Contratos</string>
    <string name="cargar">Cargar</string>

</resources>