<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="8dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_directions_car_24"
            android:id="@+id/img2"
            android:contentDescription="@string/descripcion" />

        <TextView
            android:id="@+id/tituloPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img2"
            android:text="@string/publicacionesCardViewText"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/marca"
            android:text="@string/marca"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/img2"
            android:layout_below="@id/tituloPublicacion"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anioC"
            android:text="@string/anio"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/img2"
            android:layout_below="@id/marca"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/costodiario"
            android:text="@string/valor"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_toEndOf="@id/img2"
            android:layout_below="@id/anioC"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>