<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReporteContrato">

    <TextView
        android:id="@+id/idApellidos"
        android:layout_width="148dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="69dp"
        android:hint="@string/apellidos" />

    <TextView
        android:id="@+id/idNombres"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="68dp"
        android:hint="@string/nombres" />

    <TextView
        android:id="@+id/idCedula"
        android:layout_width="142dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="125dp"
        android:hint="cedula"/>

    <TextView
        android:id="@+id/idTelefono"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="128dp"
        android:hint="telefono" />

    <TextView
        android:id="@+id/idEmail"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="183dp"
        android:hint="@string/email" />
</RelativeLayout>