<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gosht_white"
    tools:context=".splash.SplashActivity">

    <TextView
        android:id="@+id/txtNameApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="488dp"
        android:fontFamily="sans-serif-light"
        android:text="WELCOME"
        android:textAlignment="center"
        android:textColor="#1D4C6A"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivwImagenSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:src="@mipmap/rent_car_128"
        android:contentDescription="@string/descripcion" />

    <TextView
        android:id="@+id/txtNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="250dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#1D4C6A"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSloganApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="225dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textColor="#1D4C6A"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>