<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReporteFragment">

    <TextView
        android:id="@+id/idApellidos"
        android:layout_width="148dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:hint="@string/apellidos" />

    <TextView
        android:id="@+id/idNombres"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/nombres" />

    <TextView
        android:id="@+id/idCedula"
        android:layout_width="142dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:hint="cedula" />

    <TextView
        android:id="@+id/idTelefono"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="233dp"
        android:layout_marginTop="101dp"
        android:hint="telefono" />

    <TextView
        android:id="@+id/idEmail"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="153dp"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="16dp"
        android:text="DATOS PERSONALES" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="269dp"
        android:text="@string/datos_contratos" />


    <Button
        android:id="@+id/btnCargarReporteAlmeida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="306dp"
        android:text="@string/cargar" />

    <EditText
        android:id="@+id/idTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="373dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="336dp"
        android:text="Nombre :" />

    <Button
        android:id="@+id/BTNpdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="GenerarPDF"/>

    <TextView
        android:id="@+id/idFecha"
        android:layout_width="126dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="241dp"
        android:hint="fecha" />

    <TextView
        android:id="@+id/idLimite"
        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="241dp"
        android:hint="Limite" />

    <TextView
        android:id="@+id/idLimiteChoques"
        android:layout_width="104dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="245dp"
        android:hint="LimiteChoques" />

    <TextView
        android:id="@+id/idSuperVelocidad"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="166dp"
        android:hint="SuperVelocidad" />

    <TextView
        android:id="@+id/idTanqueFull"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="164dp"
        android:hint="Tanque" />

    <TextView
        android:id="@+id/idValorDiario"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="166dp"
        android:hint="ValorDiario" />

    <TextView
        android:id="@+id/idGeografico"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="90dp"
        android:hint="Geografico" />

    <TextView
        android:id="@+id/idVehiculo"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="95dp"
        android:hint="vehiculoPlaca" />

</RelativeLayout>